# FastAPI-Wireshark-Uploader-App

./: .gitignore  README.md  app.py  packets.py  pyproject.toml
static/: style.css
templates/: index.html
